Pull up following revision(s) (requested by dholland in ticket #1242): 	sbin/resize_ffs/resize_ffs.c: revision 1.47 Fix handling of ffsv2 inode initialization. Retires PR 51116.